// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OutputVariables when serviceType is JOB should match snapshot 1`] = `
<body>
  <div>
    <div
      class="overflow-hidden"
    >
      <div
        class="overflow-y-hidden overflow-x-scroll rounded-md border border-neutral bg-surface-neutral"
      >
        <table
          class="min-w-full divide-y divide-neutral text-neutral w-full text-ssm"
        >
          <thead>
            <tr>
              <th
                class="h-11 border-neutral px-4 text-left font-code font-medium"
                style="width: 50%;"
              >
                <button
                  class="flex items-center gap-1 cursor-pointer select-none"
                  type="button"
                >
                  Job
                   output variables
                  <span
                    class=""
                    data-state="closed"
                  >
                    <i
                      aria-hidden="true"
                      class="fa-regular fa-circle-info text-neutral-350"
                    />
                  </span>
                </button>
              </th>
              <th
                class="h-11 border-neutral px-4 text-left font-code font-medium"
                style="width: 50%;"
              >
                Value
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-neutral"
          >
            <tr
              class="h-12"
            >
              <td
                class="h-14 border-neutral px-4 py-0"
                style="width: 50%;"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <span
                    class="text-sm text-neutral-subtle"
                  >
                    DB_PASSWORD
                  </span>
                   
                </div>
              </td>
              <td
                class="h-14 border-neutral px-4 py-0"
                style="width: 50%;"
              >
                <span
                  class="flex h-5 items-center gap-2 text-sm text-neutral-disabled"
                >
                  <span
                    class=""
                    data-state="closed"
                  >
                    <i
                      aria-hidden="true"
                      class="fa-regular fa-lock-keyhole block w-4"
                    />
                  </span>
                  <span
                    class="pt-1.5 font-medium tracking-widest"
                    data-testid="hide_value_secret"
                  >
                    ********
                  </span>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`OutputVariables when serviceType is TERRAFORM should match snapshot 1`] = `
<body>
  <div>
    <div
      class="overflow-hidden"
    >
      <div
        class="overflow-y-hidden overflow-x-scroll rounded-md border border-neutral bg-surface-neutral"
      >
        <table
          class="min-w-full divide-y divide-neutral text-neutral w-full text-ssm"
        >
          <thead>
            <tr>
              <th
                class="h-11 border-neutral px-4 text-left font-code font-medium"
                style="width: 50%;"
              >
                <button
                  class="flex items-center gap-1 cursor-pointer select-none"
                  type="button"
                >
                  Terraform
                   output variables
                  <span
                    class=""
                    data-state="closed"
                  >
                    <i
                      aria-hidden="true"
                      class="fa-regular fa-circle-info text-neutral-350"
                    />
                  </span>
                </button>
              </th>
              <th
                class="h-11 border-neutral px-4 text-left font-code font-medium"
                style="width: 50%;"
              >
                Value
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-neutral"
          >
            <tr
              class="h-12"
            >
              <td
                class="h-14 border-neutral px-4 py-0"
                style="width: 50%;"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <span
                    class="text-sm text-neutral-subtle"
                  >
                    DB_USERNAME
                  </span>
                   
                </div>
              </td>
              <td
                class="h-14 border-neutral px-4 py-0"
                style="width: 50%;"
              >
                <span
                  class="group flex h-5 w-full items-center gap-2 text-sm"
                >
                  <span
                    class="truncate text-neutral"
                    data-testid="visible_value"
                  >
                    admin2
                  </span>
                  <span
                    class="relative cursor-pointer transition after:absolute after:inset-[-4px] after:block after:content-['']"
                    data-state="closed"
                    data-testid="copy-container"
                  >
                    <i
                      aria-hidden="true"
                      class="fa-solid fa-copy text-neutral-subtle opacity-0 hover:text-neutral group-hover:opacity-100"
                    />
                  </span>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;
